--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -112,7 +112,16 @@ Remove the disconnect between design & code and release products faster!
 
 ## 📱 React-Native {#react-native}
 
-- RN 0.72 va sortir aujourd'hui!
+[![](/emails/issues/149/rn.jpg)](https://reactnative.dev/blog/2023/06/21/0.72-metro-package-exports-symlinks)
+
+**[React Native 0.72 - Symlink Support, Better Errors, and more](https://reactnative.dev/blog/2023/06/21/0.72-metro-package-exports-symlinks)**
+
+Après plusieurs Golden RC, la dernière version de React-Native vient juste de sortir.
+
+Il y a pas mal d'améliorations mentionnées (DX, Hermès, performance...) et quelques breaking changes. J'aime en particulier ces 2 nouvelles features Metro:
+
+- Metro Symlinks (beta): très attendu pour le support monorepo
+- [Metro Package Exports](https://reactnative.dev/blog/2023/06/21/package-exports-support) (beta): permet aux libs universelles d'exposer un point d'entrée spécifique à React-Native
 
 https://deploy-preview-3725--react-native.netlify.app/blog/2023/06/21/0.72-metro-package-exports-symlinks
 
