--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /149
-title: "React Hebdo #149: Panda CSS, React-Native 0.72, Isograph, Server Actions, MDX, Remix, Gatsby, Storybook, OpenNext, Fresh, Docusaurus, surveys... "
+title: "React Hebdo #149: Panda CSS, React-Native 0.72, Server Actions, Isograph, MDX, Remix, Gatsby, Storybook, OpenNext, Wrap-Balancer, Fresh, Docusaurus, surveys... "
 authors: [slorber]
 date: 06-20-2023
 image: /img/TWIR_POST.png
@@ -81,8 +81,8 @@ Une librairie à surveiller de prêt et qui pourrait bien concurrencer Tailwind:
 - 📜 [React Admin June 2023 Update](https://marmelab.com/blog/2023/06/13/react-admin-june-2023-update.html): présente une belle liste de features introduites ces 3 derniers mois.
 - 📜 [Ryan Bigg - Rails 7, React, TypeScript, ESBuild and View Components](https://ryanbigg.com/2023/06/rails-7-react-typescript-setup): expliquer comment intégrer manuellement React dans une app Rails. Mode SPA, ou avec plusieurs points d'entrée.
 - 📜 [Introduction to Next.js Server Actions](https://makerkit.dev/blog/tutorials/nextjs-server-actions): bon aperçu des Server Actions de Next.js 13.4. Je découvre qu'on peut les invoquer depuis un bouton.
-- 📜 [Storybook - New API references, TypeScript code snippets, and docs DX](https://storybook.js.org/blog/docs-updates/): améliorations sur la documentation.
 - 📜 [Replay for Test Suites](https://blog.replay.io/replay-for-test-suites): l'outil de time-travel debugging s'intègre avec Cypress et lève $13m.
+- 📜 [Storybook - New API references, TypeScript code snippets, and docs DX](https://storybook.js.org/blog/docs-updates/)
 - 📜 [A Visual Guide to Layouts in Next.js 13](https://www.builder.io/blog/layouts-in-nextjs-13-visual)
 - 📜 [Building a `<Button>` in React](https://catjam.fi/articles/ultimate-button-component)
 - 📜 [Test your React hooks with Vitest efficiently](https://mayashavin.com/articles/test-react-hooks-with-vitest)
