--- a/website/newsletter/149/index.mdx
+++ b/website/newsletter/149/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /149
-title: "This Week In React #149: Panda CSS, React-Native 0.72, Isograph, Server Actions, MDX, Remix, Gatsby, Storybook, OpenNext, Fresh, Docusaurus, surveys... "
+title: "This Week In React #149: Panda CSS, React-Native 0.72, Server Actions, Isograph, MDX, Remix, Gatsby, Storybook, OpenNext, Wrap-Balancer, Fresh, Docusaurus, surveys... "
 authors: [slorber]
 date: 06-20-2023
 image: /img/TWIR_POST.png
@@ -55,7 +55,7 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 **[Panda CSS](https://panda-css.com/)**
 
-Segun Adebayo (creator of Chakra UI) unveils his long-awaited CSS-in-JS library ([trailer](https://twitter.com/thesegunadebayo/status/1669732623994834946)). It offers very good DX, is based on modern CSS features (cascade layers), is performant (static analysis at build time, no runtime, atomic CSS)... In short, it ticks a lot of boxes and is generating a lot of interest. It integrates particularly well with React (JSX style props, React Server Components compatible, etc.), but can also be used with other frameworks.
+Segun Adebayo (creator of Chakra UI) unveils his long-awaited CSS-in-JS library ([trailer](https://twitter.com/thesegunadebayo/status/1669732623994834946)). It offers very great DX, is based on modern CSS features (cascade layers), is performant (static analysis at build time, no runtime, atomic CSS)... In short, it ticks a lot of boxes and is generating a lot of interest. It integrates particularly well with React (JSX style props, React Server Components compatible, etc.), but can also be used with other frameworks.
 
 This is a library to keep a close eye on and one that could well compete with Tailwind: it integrates better with the target frameworks and doesn't force you to use a lengthy `className`.
 
@@ -69,13 +69,13 @@ This is a library to keep a close eye on and one that could well compete with Ta
 - 📊 [Stack Overflow Developer Survey 2023](https://survey.stackoverflow.co/2023/): as expected, React remains the most widely used web framework this year and Next.js has moved up the rankings.
 - 💬 [Gatsby RFC - Adapters](https://github.com/gatsbyjs/gatsby/discussions/38231): a new type of plugin to adapt the build to a deployment platform (Vercel, Netlify...) regarding caching, headers, redirects...
 - 📖 [Improved Next.js image docs](https://twitter.com/leeerob/status/1670815761508581376)
+- 📜 [Introduction to Next.js Server Actions](https://makerkit.dev/blog/tutorials/nextjs-server-actions): great overview of Server Actions in Next.js 13.4. TIL that they can be invoked from a button.
 - 📜 [Introducing Isograph](https://isograph.substack.com/p/introducing-isograph): Robert Balicki (ex Relay) shares the POC of a new GraphQL client for React based on the concept of resolvers.
 - 📜 [SpiderMonkey Newsletter - Firefox 114-115](https://spidermonkey.dev/blog/2023/06/09/newsletter-firefox-114-115.html): Firefox devs announced that they are working on optimisations for frameworks such as React. With Firefox 115, [all browsers now support Change Array By Copy](https://twitter.com/sebastienlorber/status/1671166785738133505), a new ES2023 feature super useful to update your React state.
 - 📜 [React Admin June 2023 Update](https://marmelab.com/blog/2023/06/13/react-admin-june-2023-update.html): presents a fine list of features introduced over the last 3 months.
 - 📜 [Ryan Bigg - Rails 7, React, TypeScript, ESBuild and View Components](https://ryanbigg.com/2023/06/rails-7-react-typescript-setup): explain how to manually integrate React into a Rails app. SPA mode, or with several entry points.
-- 📜 [Introduction to Next.js Server Actions](https://makerkit.dev/blog/tutorials/nextjs-server-actions): a good overview of Server Actions in Next.js 13.4. TIL that they can be invoked from a button.
-- 📜 [Storybook - New API references, TypeScript code snippets, and docs DX](https://storybook.js.org/blog/docs-updates/)
 - 📜 [Replay for Test Suites](https://blog.replay.io/replay-for-test-suites): the time-travel debugging tool integrates with Cypress and raises $13m.
+- 📜 [Storybook - New API references, TypeScript code snippets, and docs DX](https://storybook.js.org/blog/docs-updates/)
 - 📜 [A Visual Guide to Layouts in Next.js 13](https://www.builder.io/blog/layouts-in-nextjs-13-visual)
 - 📜 [Building a `<Button>` in React](https://catjam.fi/articles/ultimate-button-component)
 - 📜 [Test your React hooks with Vitest efficiently](https://mayashavin.com/articles/test-react-hooks-with-vitest)
