--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/149/index.mdx
@@ -4,12 +4,11 @@ title: "React Hebdo #149: Panda CSS, React-Native 0.72, Server Actions, Isograph
 authors: [slorber]
 date: 06-20-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
 
-Cette semaine a été plus active que la semaine dernière. On a en particulier 2 sorties très attendues:
+Cette semaine a été plus active que la semaine dernière. On a en particulier 2 sorties très attendues, l'une d'elles a même [retardé la newsletter](https://twitter.com/sebastienlorber/status/1671433559280607235).
 
 - Panda CSS: nouvelle librairie CSS-in-JS prometteuse
 - React-Native 0.72: de belles améliorations, notamment liées à Metro
