--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -9,6 +9,10 @@ unlisted: true
 
 Salut à tous !
 
+- [retweet or quote tweet this post](https://twitter.com/reactgamejam/status/1672254466211340291)
+
+- share [reactjam.com](http://reactjam.com/) with your communities
+
 <Todo />
 
 <!-- truncate -->
@@ -71,7 +75,6 @@ Porkbun offers hundreds of domain extensions for React and React-Native develope
 Check out our **AI Generated Search tool** that’s changing the way people look for domain names. All this is backed by **incredible support 365 days a year** plus thousands of real five-star reviews on Trustpilot.
 
 Click the link and [get $1 off your next domain name registration](http://porkbun.com/?coupon=TWIREACT&utm_source=TWIREACT&utm_medium=Newsletter&utm_campaign=twirjune2023) at Porkbun.com!
-
 
 ---
 
