--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -52,7 +52,24 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
-<Todo />
+- 📜 [Medusa Product Module - E-commerce building blocks for Next.js](https://medusajs.com/recap/)
+- 📜 [GitHub - Crafting a better, faster code view](https://github.blog/2023-06-21-crafting-a-better-faster-code-view/) + https://twitter.com/github/status/1671603142373396482
+- https://twitter.com/FredKSchott/status/1673722399278403584
+- 📜 [Vercel - Introducing Skew Protection](https://vercel.com/blog/version-skew-protection) + https://twitter.com/vercel/status/1671634193544269824
+- Tejas Next.js vid: https://twitter.com/TejasKumar_/status/1673659326538424322
+- 📜 [Next.js Update - Top priorities](https://twitter.com/delba_oliveira/status/1672258238446989314) + https://nextjs.org/blog/june-2023-update + https://twitter.com/nextjs/status/1672021371919175682
+- 👀 [Remotion 4.0 launches next week](https://twitter.com/JNYBGR/status/1673641398539546625)
+- 💡[Refresh React Server Component on Focus](https://buildui.com/recipes/refresh-react-server-component-on-focus)
+- 📦 [AI.JSX](https://github.com/fixie-ai/ai-jsx)
+- 📜 [Our experience adding Edge Runtime to Next.js SDK](https://blog.logto.io/next-edge/)
+- 📦 https://github.com/Sh4yy/vercel-email ?
+- 📜 [Things you might not know about Next Image](https://pixelpoint.io/blog/next-image/)
+- 📜 [Using useMutation to make an advanced toggle in React](https://www.propelauth.com/post/using-usemutation-to-make-an-advanced-toggle-in-react)
+- 📜 [Thoughts on Svelte(Kit), one year and 3 billion requests later](https://claudioholanda.ch/en/blog/svelte-kit-after-3-billion-requests/)
+- 📜 [Storybook - Zero-config support for Tailwind, MUI, styled-components, and Emotion](https://storybook.js.org/blog/zero-config-support-for-tailwind-mui-styled-components-and-emotion/) + https://twitter.com/storybookjs/status/1671907527422795776
+- 📜 [Teleportation in React: Positioning, Stacking Context, and Portals](https://www.developerway.com/posts/positioning-and-portals-in-react)
+- 📜 [The Getting Started with AI Stack for JavaScript](https://a16z.com/2023/06/21/the-getting-started-with-ai-stack-for-javascript/)
+- 📜 [SwiftUI stole the best parts of React…and my heart](https://www.mux.com/blog/swiftui-against-react)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -80,7 +97,18 @@ Click the link and [get $1 off your next domain name registration](http://porkb
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 📜 [NativeScript with React Native Modules](https://blog.nativescript.org/nativescript-with-react-native/) + https://twitter.com/NativeScript/status/1671873172952567808
+- 📦 [MiniSim - MacOS menu bar app for launching iOS/Android emulators](https://github.com/okwasniewski/minisim) + https://twitter.com/o_kwasniewski/status/1672257084379783174
+- Maestro feedback: https://twitter.com/jaworek3211/status/1672230720545386496
+- 📜 [How to Write a Flexbox Layout Engine](https://tchayen.com/how-to-write-a-flexbox-layout-engine)
+- VisionOS : https://twitter.com/donadeldev/status/1673186295831568385 + https://twitter.com/piaskowyk/status/1672560913730117634 + https://twitter.com/donadeldev/status/1671643367246032897 + https://twitter.com/CipolleschiR/status/1671829763650904064
+- 📜 [Revolutionizing Focus Management in TV Applications with React Native](https://medium.com/xite-engineering/revolutionizing-focus-management-in-tv-applications-with-react-native-10ba69bd90)
+- 📜 [The Native App vs Progressive Web App Debate is Completely Flawed](https://ionic.io/blog/the-native-app-vs-progressive-web-app-debate-is-completely-flawed)
+- 📜 [Mobile development trends from Chain React](https://ionic.io/blog/mobile-development-trends-from-chain-react)
+- 🎙️ [React Native Radio 270 - Diving into React Native 0.72 with Lorenzo Sciandra and Riccardo Cipolleschi](https://reactnativeradio.com/episodes/diving-into-react-native-072-with-lorenzo-sciandra-and-riccardo-cipolleschi)
+- 🎙️ [The React Native Show Podcast #23 - React Native at scale with Matt Hargett](https://www.youtube.com/watch?v=60iOEg-vWjw)
+- 🎥 [Redux-Toolkit ( RTK ) and Bluetooth Low Energy ( BLE ) in React-Native](https://www.youtube.com/watch?v=IWEAepFC0eo)
+- 🎥 [React-Native MMKV 2.10 - iOS App Groups support](https://twitter.com/mrousavy/status/1672184227813642241)
 
 ---
 
@@ -106,7 +134,8 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- [React Native Connection : première édition](https://www.premieroctet.com/blog/react-native-conn-2023)
+- [CSS Containers Queries avec Tailwind](https://www.premieroctet.com/blog/css-container-queries-avec-tailwind)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
@@ -116,13 +145,20 @@ Pas de contenu cette semaine 😅
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [An Introduction to Streaming on the Web](https://vercel.com/blog/an-introduction-to-streaming-on-the-web) + https://twitter.com/vercel/status/1672006247858708481
+- [Future CSS: State Container Queries](https://ishadeed.com/article/css-state-queries/)
+- [Svelte 4](https://svelte.dev/blog/svelte-4)
+- [Type Argument Placeholders: TypeScript 5.2's Most Discussed Feature](https://www.totaltypescript.com/type-argument-placeholders-typescript-5-2-most-discussed-feature)
+- [Vite 4.4 beta - exp Lightning CSS support](https://twitter.com/vite_js/status/1671510085820882946)
+- [A preview of Ezno's checker](https://kaleidawave.github.io/posts/a-preview-of-the-checker/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/cesarzagonel/status/1671584136115494928
+
+https://twitter.com/n_moore/status/1673407382750400517
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
