--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -13,6 +13,8 @@ Salut à tous !
 
 - share [reactjam.com](http://reactjam.com/) with your communities
 
+freework!
+
 <Todo />
 
 <!-- truncate -->
@@ -70,6 +72,11 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 - 📜 [Teleportation in React: Positioning, Stacking Context, and Portals](https://www.developerway.com/posts/positioning-and-portals-in-react)
 - 📜 [The Getting Started with AI Stack for JavaScript](https://a16z.com/2023/06/21/the-getting-started-with-ai-stack-for-javascript/)
 - 📜 [SwiftUI stole the best parts of React…and my heart](https://www.mux.com/blog/swiftui-against-react)
+- 📦 [React Aria - June 27 Release](https://twitter.com/devongovett/status/1673764872117714944)
+- 📦 [Tailwind Elements React](https://twitter.com/TailwindElement/status/1673628853909045249)
+- 📦 [Remix 1.18 - new Dev Server](https://github.com/remix-run/remix/releases/tag/remix%401.18.0) + https://www.youtube.com/watch?v=2c2OeqOX72s
+- 💬 [Stitches is not longer maintained](https://github.com/stitchesjs/stitches/discussions/1149#discussioncomment-6223090)
+- 📦 [Shadcn UI update - June 2023 - New CLI, Styles and more](https://twitter.com/shadcn/status/1671960924587180034)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -114,21 +121,14 @@ Click the link and [get $1 off your next domain name registration](http://porkb
 
 ## 🧑‍💻 Jobs {#jobs}
 
-🧑‍💼 [**ReactHebdo + Docusaurus - Stagiaire/Alternant - Full-remote**](https://gist.github.com/slorber/2f98ba706718d95590242aff6fedf955)
+[![Free-Work](/emails/issues/150/free-work.jpg)](https://www.free-work.com/fr/tech-it/jobs?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Ban-offres)
 
-Mon offre de stage/alternance pour m'aider dans mon activité! N'hésite pas à postuler si tu es intéressé par l'open-source ou la création de contenu React!
+Cette semaine, notre partenaire [Free-Work](https://www.free-work.com/fr/tech-it/jobs?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Ban-offres) propose les offres suivantes:
 
-🧑‍💼 [**Shotgun - Senior Full Stack Engineer - 60-75k€ + BSPCE**](https://shotgun.teamtailor.com/jobs/1981578-senior-full-stack-engineer)
-
-Shotgun est la billetterie des évènements electro. Nous recherchons des devs expérimentés pour travailler sur une stack moderne: React, React-Native, Typescript, GraphQL, NextJS, PgSQL, Vercel...
-
-🧑‍💼 [**Premier Octet - Développeurs(euses) React - Paris**](https://www.premieroctet.com/jobs)
-
-Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendrez en développement sur des projets variés et motivants, à la fois serveur et front (React, Nest, Next), et éventuellement mobile (React Native).
-
-💡 [Comment publier une offre d'emploi ?](https://thisweekinreact.com/fr/sponsor)
-
-🏢 **[Vous recrutez en CDI ou freelance? Contactez-moi!](https://qq4ph6n1rk0.typeform.com/to/qjSZ38dQ#email={{subscriber.email_address}})**
+- [Lead Symfony / React - CDI Paris - 70k-80k€](https://www.free-work.com/fr/tech-it/developpeur-php/job-mission/lead-symfony-react-le-local-avant-tout-paris?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre3-EasyPartner)
+- [Développeur Nodejs Mongodb Reactjs - CDI Paris - 60k-65k€](https://www.free-work.com/fr/tech-it/api-developpeur/job-mission/developpeur-nodejs-mongodb-reactjs-h-f-17?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre4-HRTEAM)
+- [Développeur JS Node React PIXI.JS - Freelance Paris - 400-510€/j](https://www.free-work.com/fr/tech-it/developpeur-web/job-mission/developpeur-js-node-react-pixi-js-secteur-du-jeu-de-casinos?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre1-OLYMPP)
+- [Développeur Nodejs Mongodb Reactjs - Freelance Paris - 500-550 €/j](https://www.free-work.com/fr/tech-it/api-developpeur/job-mission/developpeur-nodejs-mongodb-reactjs-h-f-18?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre2-HRTeam)
 
 ---
 
