--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -9,9 +9,9 @@ unlisted: true
 
 Salut à tous !
 
-- [retweet or quote tweet this post](https://twitter.com/reactgamejam/status/1672254466211340291)
+🇫🇷 Cette semaine, la section en français présente un nouveau sponsor (Pylote), et les offres de la section Jobs sont fournies par une plateforme partenaire. C'est un test: dis-moi ce que tu penses de ces nouveautés en répondant à cet email 🙏, est-ce que cela te semble pertinent?
 
-- share [reactjam.com](http://reactjam.com/) with your communities
+Je te propose également de découvrir [React Jam](https://twitter.com/reactgamejam/status/1672254466211340291): un concours de création de jeux vidéos en React qui commence le 20 juillet. Je suis membre du jury.
 
 freework!
 
@@ -54,7 +54,7 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
-- 📜 [Medusa Product Module - E-commerce building blocks for Next.js](https://medusajs.com/recap/)
+- 📜 [Medusa Product Module - E-commerce building blocks for Next.js and serverless](https://medusajs.com/recap/)
 - 📜 [GitHub - Crafting a better, faster code view](https://github.blog/2023-06-21-crafting-a-better-faster-code-view/) + https://twitter.com/github/status/1671603142373396482
 - https://twitter.com/FredKSchott/status/1673722399278403584
 - 📜 [Vercel - Introducing Skew Protection](https://vercel.com/blog/version-skew-protection) + https://twitter.com/vercel/status/1671634193544269824
@@ -77,6 +77,9 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 - 📦 [Remix 1.18 - new Dev Server](https://github.com/remix-run/remix/releases/tag/remix%401.18.0) + https://www.youtube.com/watch?v=2c2OeqOX72s
 - 💬 [Stitches is not longer maintained](https://github.com/stitchesjs/stitches/discussions/1149#discussioncomment-6223090)
 - 📦 [Shadcn UI update - June 2023 - New CLI, Styles and more](https://twitter.com/shadcn/status/1671960924587180034)
+- 🎥 [Single Line React Performance Boost with Million](https://www.youtube.com/watch?v=x-aNifu9RNw)
+- 🎥 [Don't Follow This Bad React Advice!](https://www.youtube.com/watch?v=YlU9vznPWIk)
+- 🎥 [The Ultimate Guide to Server Actions in NextJs 13 with Error Handling & Validation Using Zod](https://www.youtube.com/watch?v=sdKFEo6978U)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -134,12 +137,18 @@ Cette semaine, notre partenaire [Free-Work](https://www.free-work.com/fr/tech-it
 
 ## 🇫🇷 En français {#fr}
 
-- [React Native Connection : première édition](https://www.premieroctet.com/blog/react-native-conn-2023)
-- [CSS Containers Queries avec Tailwind](https://www.premieroctet.com/blog/css-container-queries-avec-tailwind)
+- 📜 [React Native Connection : première édition](https://www.premieroctet.com/blog/react-native-conn-2023)
+- 📜 [CSS Containers Queries avec Tailwind](https://www.premieroctet.com/blog/css-container-queries-avec-tailwind)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
-<Todo />
+[![Pylote](/emails/issues/149/pylote.jpg)](https://pylote.io/?utm_source=newsletter&utm_medium=insert&utm_campaign=sebastienl)
+
+💸 **[Pylote - L'extension 100% gratuite pour être sur toutes les plateformes de freelance.](https://pylote.io/?utm_source=newsletter&utm_medium=insert&utm_campaign=sebastienl)**
+
+- **Importe** ton profil Comet ou LinkedIn en 5 secondes.
+- **Synchronise** ta dispo et** diffuse** ton profil auprès de 17 cabinets de recrutement : Comet, Crème, Cherry-Pick...
+- **Accède** à un jobboard centralisé regroupant un ensemble de missions.
 
 ---
 
@@ -156,12 +165,6 @@ Cette semaine, notre partenaire [Free-Work](https://www.free-work.com/fr/tech-it
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/cesarzagonel/status/1671584136115494928
-
-https://twitter.com/n_moore/status/1673407382750400517
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/150/meme.jpg)](https://twitter.com/cesarzagonel/status/1671584136115494928)
 
 A plus 👋
