--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -11,11 +11,7 @@ Salut à tous !
 
 🇫🇷 Cette semaine, la section en français présente un nouveau sponsor (Pylote), et les offres de la section Jobs sont fournies par une plateforme partenaire. C'est un test: dis-moi ce que tu penses de ces nouveautés en répondant à cet email 🙏, est-ce que cela te semble pertinent?
 
-Je te propose également de découvrir [React Jam](https://twitter.com/reactgamejam/status/1672254466211340291): un concours de création de jeux vidéos en React qui commence le 20 juillet. Je suis membre du jury.
-
-freework!
-
-<Todo />
+Je te propose également de découvrir [React Jam](https://reactjam.com/): un concours de création de jeux vidéos en React qui commence le 20 juillet. Je suis membre du jury.
 
 <!-- truncate -->
 
