--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -50,32 +50,30 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 
 ## ⚛️ React {#react}
 
-- 📜 [Medusa Product Module - E-commerce building blocks for Next.js and serverless](https://medusajs.com/recap/)
-- 📜 [GitHub - Crafting a better, faster code view](https://github.blog/2023-06-21-crafting-a-better-faster-code-view/) + https://twitter.com/github/status/1671603142373396482
-- https://twitter.com/FredKSchott/status/1673722399278403584
-- 📜 [Vercel - Introducing Skew Protection](https://vercel.com/blog/version-skew-protection) + https://twitter.com/vercel/status/1671634193544269824
-- Tejas Next.js vid: https://twitter.com/TejasKumar_/status/1673659326538424322
-- 📜 [Next.js Update - Top priorities](https://twitter.com/delba_oliveira/status/1672258238446989314) + https://nextjs.org/blog/june-2023-update + https://twitter.com/nextjs/status/1672021371919175682
+- 🐦 [Fred K Schott - "React.js canary is _not_ stable and probably shouldn't be used in production."](https://twitter.com/FredKSchott/status/1673722399278403584): un débat qui anime particulièrement la communauté cette semaine. J'ai aussi partagé [mon opinion](https://twitter.com/sebastienlorber/status/1673802036666589185): c'est ok d'utiliser une release canary React dans une framework.
+- 💬 [Stitches is not longer maintained](https://github.com/stitchesjs/stitches/discussions/1149#discussioncomment-6223090)
 - 👀 [Remotion 4.0 launches next week](https://twitter.com/JNYBGR/status/1673641398539546625)
-- 💡[Refresh React Server Component on Focus](https://buildui.com/recipes/refresh-react-server-component-on-focus)
-- 📦 [AI.JSX](https://github.com/fixie-ai/ai-jsx)
+- 💡 [Refresh React Server Component on Focus](https://buildui.com/recipes/refresh-react-server-component-on-focus): petite astuce pour reproduire cette feature appréciées de React-Query/SWR.
+- 📜 [Teleportation in React: Positioning, Stacking Context, and Portals](https://www.developerway.com/posts/positioning-and-portals-in-react)
+- 📜 [GitHub - Crafting a better, faster code view](https://github.blog/2023-06-21-crafting-a-better-faster-code-view/) + https://twitter.com/github/status/1671603142373396482
+- 📜 [Vercel - Introducing Skew Protection](https://vercel.com/blog/version-skew-protection) + https://twitter.com/vercel/status/1671634193544269824
+- 📜 [Next.js Update - Top priorities](https://twitter.com/delba_oliveira/status/1672258238446989314) + https://nextjs.org/blog/june-2023-update + https://twitter.com/nextjs/status/1672021371919175682
 - 📜 [Our experience adding Edge Runtime to Next.js SDK](https://blog.logto.io/next-edge/)
-- 📦 https://github.com/Sh4yy/vercel-email ?
 - 📜 [Things you might not know about Next Image](https://pixelpoint.io/blog/next-image/)
 - 📜 [Using useMutation to make an advanced toggle in React](https://www.propelauth.com/post/using-usemutation-to-make-an-advanced-toggle-in-react)
 - 📜 [Thoughts on Svelte(Kit), one year and 3 billion requests later](https://claudioholanda.ch/en/blog/svelte-kit-after-3-billion-requests/)
-- 📜 [Storybook - Zero-config support for Tailwind, MUI, styled-components, and Emotion](https://storybook.js.org/blog/zero-config-support-for-tailwind-mui-styled-components-and-emotion/) + https://twitter.com/storybookjs/status/1671907527422795776
-- 📜 [Teleportation in React: Positioning, Stacking Context, and Portals](https://www.developerway.com/posts/positioning-and-portals-in-react)
-- 📜 [The Getting Started with AI Stack for JavaScript](https://a16z.com/2023/06/21/the-getting-started-with-ai-stack-for-javascript/)
+- 📜 [Storybook - Zero-config support for Tailwind, MUI, styled-components, and Emotion](https://twitter.com/storybookjs/status/1671907527422795776): le styling-addon est maintenant capable de s'auto-configurer pour plusieurs libs populaires.
+- 📜 [A16z - The Getting Started with AI Stack for JavaScript](https://a16z.com/2023/06/21/the-getting-started-with-ai-stack-for-javascript/): les VC Andreessen Horowitz présentent un starter AI basé sur une stack React et Next.js.
 - 📜 [SwiftUI stole the best parts of React…and my heart](https://www.mux.com/blog/swiftui-against-react)
-- 📦 [React Aria - June 27 Release](https://twitter.com/devongovett/status/1673764872117714944)
-- 📦 [Tailwind Elements React](https://twitter.com/TailwindElement/status/1673628853909045249)
-- 📦 [Remix 1.18 - new Dev Server](https://github.com/remix-run/remix/releases/tag/remix%401.18.0) + https://www.youtube.com/watch?v=2c2OeqOX72s
-- 💬 [Stitches is not longer maintained](https://github.com/stitchesjs/stitches/discussions/1149#discussioncomment-6223090)
 - 📦 [Shadcn UI update - June 2023 - New CLI, Styles and more](https://twitter.com/shadcn/status/1671960924587180034)
+- 📦 [Remix 1.18 - Stable V2 Dev Server, JSON/Text Submission...](https://github.com/remix-run/remix/releases/tag/remix%401.18.0): voir également la [série de vidéos](https://www.youtube.com/watch?v=2c2OeqOX72s) qui explique le fonctionnement du Dev Server et le concept de Hot Data Revalidation.
+- 📦 [AI.JSX - AI Application Framework for Javascript](https://github.com/fixie-ai/ai-jsx): une solution pour créer des applications AI basée sur JSX. N'utilise pas directement React, mais s'intègre particulièrement bien avec ([détails](https://docs.ai-jsx.com/is-it-react)).
+- 📦 [Medusa Product Module](https://medusajs.com/recap/): la solution e-commerce open-source propose un nouveau module pour Next.js et autres environnements serverless.
+- 📦 [React Aria - June 27 Release](https://twitter.com/devongovett/status/1673764872117714944): ajout du support StrictMode, plus besoin du SSRProvider, et diverses autres nouveautés: Calendar, DatePicker, TagGroup...
 - 🎥 [Single Line React Performance Boost with Million](https://www.youtube.com/watch?v=x-aNifu9RNw)
 - 🎥 [Don't Follow This Bad React Advice!](https://www.youtube.com/watch?v=YlU9vznPWIk)
-- 🎥 [The Ultimate Guide to Server Actions in NextJs 13 with Error Handling & Validation Using Zod](https://www.youtube.com/watch?v=sdKFEo6978U)
+- 🎥 [Make Your Own Next.js](https://www.youtube.com/watch?v=3RzhNYhjVAw)
+- 🎥 [The Ultimate Guide to Server Actions in NextJs 13](https://www.youtube.com/watch?v=sdKFEo6978U)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -103,18 +101,24 @@ Click the link and [get $1 off your next domain name registration](http://porkb
 
 ## 📱 React-Native {#react-native}
 
-- 📜 [NativeScript with React Native Modules](https://blog.nativescript.org/nativescript-with-react-native/) + https://twitter.com/NativeScript/status/1671873172952567808
-- 📦 [MiniSim - MacOS menu bar app for launching iOS/Android emulators](https://github.com/okwasniewski/minisim) + https://twitter.com/o_kwasniewski/status/1672257084379783174
-- Maestro feedback: https://twitter.com/jaworek3211/status/1672230720545386496
-- 📜 [How to Write a Flexbox Layout Engine](https://tchayen.com/how-to-write-a-flexbox-layout-engine)
-- VisionOS : https://twitter.com/donadeldev/status/1673186295831568385 + https://twitter.com/piaskowyk/status/1672560913730117634 + https://twitter.com/donadeldev/status/1671643367246032897 + https://twitter.com/CipolleschiR/status/1671829763650904064
-- 📜 [Revolutionizing Focus Management in TV Applications with React Native](https://medium.com/xite-engineering/revolutionizing-focus-management-in-tv-applications-with-react-native-10ba69bd90)
-- 📜 [The Native App vs Progressive Web App Debate is Completely Flawed](https://ionic.io/blog/the-native-app-vs-progressive-web-app-debate-is-completely-flawed)
-- 📜 [Mobile development trends from Chain React](https://ionic.io/blog/mobile-development-trends-from-chain-react)
+[![React Native 0.72 and Expo SDK 49 running on visionOS](/emails/issues/150/visionpro.jpg)](https://twitter.com/donadeldev/status/1671643367246032897)
+
+**[React Native 0.72 and Expo SDK 49 running on visionOS](https://twitter.com/donadeldev/status/1671643367246032897)**
+
+Suite à la sortie de React-Native 0.72 et du [SDK Apple visionOS](https://developer.apple.com/visionos/), plusieurs demos ([1](https://twitter.com/donadeldev/status/1671643367246032897), [2](https://twitter.com/CipolleschiR/status/1671829763650904064), [3](https://twitter.com/piaskowyk/status/1672560913730117634)) ont montré la capacité à faire tourner React-Native sur visionOS et Vision Pro. Des [pull-requests](https://twitter.com/donadeldev/status/1673186295831568385) sont en train d'ajouter la target visionOS à CocoaPods.
+
+---
+
+- 📜 [How to Write a Flexbox Layout Engine](https://tchayen.com/how-to-write-a-flexbox-layout-engine): un dev Expo démystifie le fonctionnement d'un moteur de layout, similaire à ce que fait Yoga pour React-Native.
+- 📜 [Revolutionizing Focus Management in TV Applications with React Native](https://medium.com/xite-engineering/revolutionizing-focus-management-in-tv-applications-with-react-native-10ba69bd90): retour d'expérience de XITE sur l'implémentation de navigation spaciale via React-Native tvOS. Challenge: les plateformes Apple/Android TV ont une gestion native du focus différente.
+- 📜 [NativeScript with React Native Modules](https://twitter.com/NativeScript/status/1671873172952567808): met en avant la capacité de NativeScript de réutiliser le code de l'écosystème React-Native via le projet [Open Native](https://github.com/OpenNative/open-native).
+- 📜 [Mobile development trends from Chain React](https://ionic.io/blog/mobile-development-trends-from-chain-react): analyse des talks de la conférence et comparaison avec Ionic/Capacitor.
+- 🧵 [Maestro on React Native Pager View](https://twitter.com/jaworek3211/status/1672230720545386496): retour d'expérience positif sur l'usage de du framework de test e2e mobile.
+- 📦 [MiniSim - MacOS menu bar app for launching iOS/Android emulators](https://github.com/okwasniewski/minisim): une app particulièrement appréciée pour sa capacité à [démarrer un émulateur Android sans le son](https://twitter.com/ariel_is_dev/status/1672250640704184321) 😄. Supporte déjà [VisionOS](https://twitter.com/o_kwasniewski/status/1672257084379783174).
+- 📦 [React-Native MMKV 2.10 - iOS App Groups support](https://twitter.com/mrousavy/status/1672184227813642241)
 - 🎙️ [React Native Radio 270 - Diving into React Native 0.72 with Lorenzo Sciandra and Riccardo Cipolleschi](https://reactnativeradio.com/episodes/diving-into-react-native-072-with-lorenzo-sciandra-and-riccardo-cipolleschi)
 - 🎙️ [The React Native Show Podcast #23 - React Native at scale with Matt Hargett](https://www.youtube.com/watch?v=60iOEg-vWjw)
-- 🎥 [Redux-Toolkit ( RTK ) and Bluetooth Low Energy ( BLE ) in React-Native](https://www.youtube.com/watch?v=IWEAepFC0eo)
-- 🎥 [React-Native MMKV 2.10 - iOS App Groups support](https://twitter.com/mrousavy/status/1672184227813642241)
+- 🎥 [Redux-Toolkit and Bluetooth Low Energy in React-Native](https://www.youtube.com/watch?v=IWEAepFC0eo)
 
 ---
 
@@ -122,7 +126,7 @@ Click the link and [get $1 off your next domain name registration](http://porkb
 
 [![Free-Work](/emails/issues/150/free-work.jpg)](https://www.free-work.com/fr/tech-it/jobs?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Ban-offres)
 
-Cette semaine, notre partenaire [Free-Work](https://www.free-work.com/fr/tech-it/jobs?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Ban-offres) propose les offres suivantes:
+Cette semaine, notre partenaire [**Free-Work**](https://www.free-work.com/fr/tech-it/jobs?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Ban-offres) propose les offres suivantes:
 
 - [Lead Symfony / React - CDI Paris - 70k-80k€](https://www.free-work.com/fr/tech-it/developpeur-php/job-mission/lead-symfony-react-le-local-avant-tout-paris?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre3-EasyPartner)
 - [Développeur Nodejs Mongodb Reactjs - CDI Paris - 60k-65k€](https://www.free-work.com/fr/tech-it/api-developpeur/job-mission/developpeur-nodejs-mongodb-reactjs-h-f-17?utm_medium=newsletter&utm_source=thisweekinreact&utm_campaign=thisweekinreact_fr_flwo_20230628_newsletter-20230628_Offre4-HRTEAM)
