--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/150/index.mdx
@@ -53,7 +53,7 @@ Watch the [4-min demo video](https://www.youtube.com/watch?v=zRkeKSZjlyw)
 - 🐦 [Fred K Schott - "React.js canary is _not_ stable and probably shouldn't be used in production."](https://twitter.com/FredKSchott/status/1673722399278403584): un débat qui anime particulièrement la communauté cette semaine. J'ai aussi partagé [mon opinion](https://twitter.com/sebastienlorber/status/1673802036666589185): c'est ok d'utiliser une release canary React dans une framework.
 - 💬 [Stitches is not longer maintained](https://github.com/stitchesjs/stitches/discussions/1149#discussioncomment-6223090)
 - 👀 [Remotion 4.0 launches next week](https://twitter.com/JNYBGR/status/1673641398539546625)
-- 💡 [Refresh React Server Component on Focus](https://buildui.com/recipes/refresh-react-server-component-on-focus): petite astuce pour reproduire cette feature appréciées de React-Query/SWR.
+- 💡 [Refresh React Server Component on Focus](https://buildui.com/recipes/refresh-react-server-component-on-focus): astuce pour reproduire une feature appréciées de React-Query/SWR.
 - 📜 [Teleportation in React: Positioning, Stacking Context, and Portals](https://www.developerway.com/posts/positioning-and-portals-in-react)
 - 📜 [GitHub - Crafting a better, faster code view](https://github.blog/2023-06-21-crafting-a-better-faster-code-view/) + https://twitter.com/github/status/1671603142373396482
 - 📜 [Vercel - Introducing Skew Protection](https://vercel.com/blog/version-skew-protection) + https://twitter.com/vercel/status/1671634193544269824
